--- a/themes.css
+++ b/themes.css
@@ -1,22 +1,43 @@
-* {
-  --oscd-theme-primary: #007FAD;
-  --oscd-theme-secondary: #73993E;
-  --oscd-theme-error: #dc3545;
+@media (prefers-color-scheme: light) {
+  * {
+    --oscd-theme-primary: rgb(101 85 143);
+    --oscd-theme-secondary: rgb(98 91 113);
+    --oscd-theme-error: rgb(179 38 30);
 
-  --oscd-theme-base03: #443f5c;
-  --oscd-theme-base02: #474263;
-  --oscd-theme-base01: #30295a;
-  --oscd-theme-base00: #4d476b;
-  --oscd-theme-base0: #0b3569;
-  --oscd-theme-base1: #193e6a;
-  --oscd-theme-base2: #e6f5fd;
-  --oscd-theme-base3: #f6fbff;
+    --oscd-theme-base03: rgb(29 27 32);
+    --oscd-theme-base02: rgb(29 27 32);
+    --oscd-theme-base01: rgb(73 69 79);
+    --oscd-theme-base00: rgb(121 116 126);
+    --oscd-theme-base0: rgb(125 82 96);
+    --oscd-theme-base1: rgb(231 224 236);
+    --oscd-theme-base2: rgb(254 247 255);
+    --oscd-theme-base3: rgb(254 247 255);
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  * {
+    --oscd-theme-primary: rgb(208 188 254);
+    --oscd-theme-secondary: rgb(204 194 220);
+    --oscd-theme-error: rgb(242 184 181);
+
+    --oscd-theme-base3: rgb(230 224 233);
+    --oscd-theme-base2: rgb(230 224 233);
+    --oscd-theme-base1: rgb(202 196 208);
+    --oscd-theme-base0: rgb(239 184 200);
+    --oscd-theme-base00: rgb(121 116 126);
+    --oscd-theme-base01: rgb(73 69 79);
+    --oscd-theme-base02: rgb(20 18 24);
+    --oscd-theme-base03: rgb(20 18 24);
+  }
+}
+
+* {
+  --primary: var(--oscd-theme-primary);
+  --secondary: var(--oscd-theme-secondary);
 
   --oscd-theme-text-font: "Roboto";
   --oscd-theme-icon-font: "Material Symbols Outlined";
-
-  --primary: var(--oscd-theme-primary);
-  --secondary: var(--oscd-theme-secondary);
 
   margin: 0px;
   padding: 0px;
@@ -25,55 +46,55 @@
 :root {
   /* built with Figma plugin as per guidance for Material Web Components */
   /* see https://github.com/material-components/material-web/blob/main/docs/theming/color.md */
-  --md-sys-color-primary: #006495;
-  --md-sys-color-on-primary: #ffffff;
-  --md-sys-color-primary-container: #cbe6ff;
-  --md-sys-color-on-primary-container: #001e30;
-  --md-sys-color-primary-fixed: #cbe6ff;
-  --md-sys-color-on-primary-fixed: #001e30;
-  --md-sys-color-primary-fixed-dim: #8fcdff;
-  --md-sys-color-on-primary-fixed-variant: #004b71;
-  --md-sys-color-secondary: #446900;
-  --md-sys-color-on-secondary: #ffffff;
-  --md-sys-color-secondary-container: #b1f743;
-  --md-sys-color-on-secondary-container: #111f00;
-  --md-sys-color-secondary-fixed: #b1f743;
-  --md-sys-color-on-secondary-fixed: #111f00;
-  --md-sys-color-secondary-fixed-dim: #96da23;
-  --md-sys-color-on-secondary-fixed-variant: #324f00;
-  --md-sys-color-tertiary: #8a5100;
-  --md-sys-color-on-tertiary: #ffffff;
-  --md-sys-color-tertiary-container: #ffdcbd;
-  --md-sys-color-on-tertiary-container: #2c1600;
-  --md-sys-color-tertiary-fixed: #ffdcbd;
-  --md-sys-color-on-tertiary-fixed: #2c1600;
-  --md-sys-color-tertiary-fixed-dim: #ffb86d;
-  --md-sys-color-on-tertiary-fixed-variant: #683c00;
-  --md-sys-color-error: #ba1830;
-  --md-sys-color-error-container: #ffdad9;
-  --md-sys-color-on-error: #ffffff;
-  --md-sys-color-on-error-container: #410008;
-  --md-sys-color-background: #fffbff;
-  --md-sys-color-on-background: #1d1c16;
-  --md-sys-color-outline: #7b7768;
-  --md-sys-color-inverse-on-surface: #f5f0e7;
-  --md-sys-color-inverse-surface: #32302a;
-  --md-sys-color-inverse-primary: #8fcdff;
-  --md-sys-color-shadow: #000000;
-  --md-sys-color-surface-tint: #006495;
-  --md-sys-color-outline-variant: #ccc6b5;
-  --md-sys-color-scrim: #000000;
-  --md-sys-color-surface: #fef9f0;
-  --md-sys-color-on-surface: #1d1c16;
-  --md-sys-color-surface-variant: #e9e2d0;
-  --md-sys-color-on-surface-variant: #4a4739;
-  --md-sys-color-surface-container-highest: #e7e2d9;
-  --md-sys-color-surface-container-high: #ece8df;
-  --md-sys-color-surface-container: #f2ede4;
-  --md-sys-color-surface-container-low: #f8f3ea;
-  --md-sys-color-surface-container-lowest: #ffffff;
-  --md-sys-color-surface-dim: #ded9d1;
-  --md-sys-color-surface-bright: #fef9f0;
+  --md-sys-color-primary: rgb(101 85 143);
+  --md-sys-color-surface-tint: rgb(103 80 164);
+  --md-sys-color-on-primary: rgb(255 255 255);
+  --md-sys-color-primary-container: rgb(234 221 255);
+  --md-sys-color-on-primary-container: rgb(33 0 93);
+  --md-sys-color-secondary: rgb(98 91 113);
+  --md-sys-color-on-secondary: rgb(255 255 255);
+  --md-sys-color-secondary-container: rgb(232 222 248);
+  --md-sys-color-on-secondary-container: rgb(29 25 43);
+  --md-sys-color-tertiary: rgb(125 82 96);
+  --md-sys-color-on-tertiary: rgb(255 255 255);
+  --md-sys-color-tertiary-container: rgb(255 216 228);
+  --md-sys-color-on-tertiary-container: rgb(49 17 29);
+  --md-sys-color-error: rgb(179 38 30);
+  --md-sys-color-on-error: rgb(255 255 255);
+  --md-sys-color-error-container: rgb(249 222 220);
+  --md-sys-color-on-error-container: rgb(65 14 11);
+  --md-sys-color-background: rgb(254 247 255);
+  --md-sys-color-on-background: rgb(29 27 32);
+  --md-sys-color-surface: rgb(254 247 255);
+  --md-sys-color-on-surface: rgb(29 27 32);
+  --md-sys-color-surface-variant: rgb(231 224 236);
+  --md-sys-color-on-surface-variant: rgb(73 69 79);
+  --md-sys-color-outline: rgb(121 116 126);
+  --md-sys-color-outline-variant: rgb(202 196 208);
+  --md-sys-color-shadow: rgb(0 0 0);
+  --md-sys-color-scrim: rgb(0 0 0);
+  --md-sys-color-inverse-surface: rgb(50 47 53);
+  --md-sys-color-inverse-on-surface: rgb(245 239 247);
+  --md-sys-color-inverse-primary: rgb(208 188 255);
+  --md-sys-color-primary-fixed: rgb(234 221 255);
+  --md-sys-color-on-primary-fixed: rgb(33 0 93);
+  --md-sys-color-primary-fixed-dim: rgb(208 188 255);
+  --md-sys-color-on-primary-fixed-variant: rgb(79 55 139);
+  --md-sys-color-secondary-fixed: rgb(232 222 248);
+  --md-sys-color-on-secondary-fixed: rgb(29 25 43);
+  --md-sys-color-secondary-fixed-dim: rgb(204 194 220);
+  --md-sys-color-on-secondary-fixed-variant: rgb(74 68 88);
+  --md-sys-color-tertiary-fixed: rgb(255 216 228);
+  --md-sys-color-on-tertiary-fixed: rgb(49 17 29);
+  --md-sys-color-tertiary-fixed-dim: rgb(239 184 200);
+  --md-sys-color-on-tertiary-fixed-variant: rgb(99 59 72);
+  --md-sys-color-surface-dim: rgb(222 216 225);
+  --md-sys-color-surface-bright: rgb(254 247 255);
+  --md-sys-color-surface-container-lowest: rgb(255 255 255);
+  --md-sys-color-surface-container-low: rgb(247 242 250);
+  --md-sys-color-surface-container: rgb(243 237 247);
+  --md-sys-color-surface-container-high: rgb(236 230 240);
+  --md-sys-color-surface-container-highest: rgb(230 224 233);
 }
 
 abbr {
